# youbot_sim

youbot_description/urdf/sensors/: microsoft_lifecam.gazebo.xacro  microsoft_lifecam.urdf.xacro
youbot_description/urdf/youbot_arm/: arm.gazebo.xacro  arm.transmission.xacro
youbot_description/urdf/youbot_base/: base.transmission.xacro
youbot_gazebo_control/config/: arm_1_controller.yaml
youbot_sim/: CMakeLists.txt  package.xml
youbot_simulation/: CMakeLists.txt  package.xml
youbot_simulation/launch/: arena.launch  xacroload.launch  youbot.launch  youbot_arm_only_simulation.launch  youbot_cam_model.launch  youbot_gazebo.launch  youbot_gazebo_cam.launch  youbot_simulation.launch
youbot_simulation/media/materials/scripts/: checkboard.material
youbot_simulation/rviz/: youbot.rviz  youbot_cam.rviz
youbot_simulation/src/: home.cpp  kinumatics_control.cpp  youbot_gazebo_msg_wrapper.cpp
youbot_simulation/urdf/: checkboard.gazebo.xacro  checkboard.xacro  material.urdf.xacro  youbot_cam_1.urdf.xacro
youbot_simulation/xml/: kuka_youbot.xml
